[package]
name = "fakecam"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Felix Glinka <devglinka@posteo.eu>"]
repository = "https://github.com/fglinka/fake-greenscreen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.17.4"
gstreamer-base = "0.17.2"
gstreamer-video = "0.17.2"
gtk4 = "0.3.0"
once_cell = "1.8.0"
