[package]
name = "fakecam"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Felix Glinka <devglinka@posteo.eu>"]
repository = "https://github.com/fglinka/fake-greenscreen"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.17"
gstreamer-base = "0.17"
gstreamer-video = "0.17"
gtk4 = "0.3"
once_cell = "1.8"
onnxruntime = { version = "0.0.14", optional = true }
opencv = "0.61"
quick-error = "2"

[features]
default = ["rvm"]
# Build the "Robust Video Matting" implementation from https://github.com/PeterL1n/RobustVideoMatting
rvm = ["onnxruntime"]
