[package]
name = "fakecam"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Felix Glinka <devglinka@posteo.eu>"]
repository = "https://github.com/fglinka/fake-greenscreen"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "^0.20.3"
gstreamer-base = "^0.20.0"
gstreamer-video = "^0.20.3"
gtk4 = "^0.6.4"
once_cell = "^1.17.1"
onnxruntime = { version = "0.0.14", optional = true }
opencv = "^0.78.2"
quick-error = "^2.0.1"

[features]
default = ["rvm"]
# Build the "Robust Video Matting" implementation from https://github.com/PeterL1n/RobustVideoMatting
rvm = ["onnxruntime"]
